fix: increase font size for experience description for better readability

--- a/src/App.css
+++ b/src/App.css
@@ -393,7 +393,7 @@ nav h3 {
 .exp-description {
   color: rgb(185, 181, 181);
   margin-left: 15px;
-  font-size: .9em;
+  font-size: 1em;
 }
 
 .exp-stack {
